--- a/data_viz.ipynb
+++ b/data_viz.ipynb
@@ -821,11 +821,11 @@
    ],
    "source": [
     "numeric_df = df.select_dtypes(include=['number'])\n",
-    "plt.figure(figsize=(10, 6))  # Optional: specify the size of the plot\n",
+    "plt.figure(figsize=(10, 6))\n",
     "numeric_df.boxplot(\n",
     "    vert=True,               # Vertical boxplot\n",
     "    patch_artist=True,       # Filled boxes\n",
-    "    showmeans=True,          # Show mean\n",
+    "    showmeans=True,          # Shows mean\n",
     "    boxprops=dict(facecolor='lightblue', color='blue'), # Box color\n",
     "    whiskerprops=dict(color='green'), # Whisker color\n",
     "    capprops=dict(color='red'), # Cap color\n",
