stack plot begins

--- a/data_viz.ipynb
+++ b/data_viz.ipynb
@@ -837,6 +837,13 @@
     "plt.ylabel('Values')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stack Plot"
+   ]
   }
  ],
  "metadata": {
