--- a/data_viz.ipynb
+++ b/data_viz.ipynb
@@ -992,7 +992,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 11. Using xticks, xlim and axis functions"
+    "### 11. Using xticks, xlim, axis and annotation functions"
    ]
   },
   {
